--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.2.51'
+        kotlinVersion = '1.2.71' 
         springBootVersion = '2.0.6.RELEASE'
     }
     repositories {
@@ -20,7 +20,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'cn.chen'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = 1.8
 compileKotlin {
     kotlinOptions {
@@ -46,4 +46,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+
+    compile group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: '3.0.5'
+    compile 'cn.hutool:hutool-all:4.1.19'
 }
