--- a/build.gradle
+++ b/build.gradle
@@ -49,4 +49,7 @@ dependencies {
 
     compile group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: '3.0.5'
     compile 'cn.hutool:hutool-all:4.1.19'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
+    compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
+
 }
