--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 server:
   port: 8888
   address: 127.0.0.1
+
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/news?useSSL=false
+    username: debian-sys-maint
+    password: Yxie52uGiMHYw5jE
+    driver-class-name: com.mysql.jdbc.Driver
