--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/news?useSSL=false
-    username: debian-sys-maint
-    password: Yxie52uGiMHYw5jE
+    url: jdbc:mysql://192.168.0.4:3306/news?useUnicode=true&useSSL=false&characterEncoding=utf8
+#    username: debian-sys-maint
+#    password: Yxie52uGiMHYw5jE
+    username: root
+    password: TaiBang0810
     driver-class-name: com.mysql.jdbc.Driver
