--- a/build.gradle
+++ b/build.gradle
@@ -52,5 +52,8 @@ dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
     compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
     compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.1.1.RELEASE'
+    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.51'
 
 }
