--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,3 @@
-server:
-  port: 8888
-  address: 127.0.0.1
-
 spring:
-  datasource:
-    url: jdbc:mysql://192.168.0.4:3306/news?useUnicode=true&useSSL=false&characterEncoding=utf8
-#    username: debian-sys-maint
-#    password: Yxie52uGiMHYw5jE
-    username: root
-    password: TaiBang0810
-    driver-class-name: com.mysql.jdbc.Driver
+  profiles:
+    active: online
